--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
+    "keen-slider": "^6.8.6",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
