--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "keen-slider": "^6.8.6",
     "next": "14.2.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "stripe": "^15.12.0"
   },
   "devDependencies": {
     "@types/node": "20.14.2",
